# cargo-patch

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs  main.rs
tests/: patch_crates_io.rs  patch_create_and_delete.rs  patch_edit.rs  patch_empty.rs  patch_err.rs  patch_git.rs  patch_github_pr_diff.rs  patch_using_build_rs.rs
