[package]
name = "cargo-patch"
version = "0.3.2"
authors = ["Marc Mettke <marc@itmettke.de>"]
edition = "2021"
description = "Cargo Subcommand for patching dependencies using patch files"
license = "MIT"
repository = "https://github.com/mettke/cargo-patch"
readme = "README.md"
keywords = ["cargo", "patch", "dependency", "dependencies", "patchfile"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
cargo = "0.94.0"
clap = { version = "4.5.59", features = ["derive"] }
crates-index = { version = "3", default-features = false, features = ["sparse"] }
ureq = "3"
fs_extra = "1"
patch = "0.7"
semver = "1"
toml = "0.9.11"

[dev-dependencies]
cargo-test-macro = "0.4.8"
cargo-test-support = "0.9.1"
